--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "andreas-modal-simple": "^0.2.3",
     "daisyui": "^2.46.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
@@ -21,7 +22,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
-    "simple-modal-andreas": "^0.1.1",
+    "simple-modal-andreas": "^0.1.9",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
