--- a/package.json
+++ b/package.json
@@ -1,58 +1,66 @@
 {
-  "name": "wealthhealth",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "andreas-modal-simple": "^0.4.3",
-    "daisyui": "^2.46.0",
-    "react": "^18.2.0",
-    "react-data-table-component": "^7.5.3",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.1",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.6.1",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "redux-persist": "^6.0.0",
-    "simple-modal-andreas": "^0.1.9",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
-  }
+	"name": "wealthhealth",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.1",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.11",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.10",
+		"daisyui": "^2.46.0",
+		"modal-andreas": "^1.1.0",
+		"react": "^18.2.0",
+		"react-data-table-component": "^7.5.3",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.41.1",
+		"react-redux": "^8.0.5",
+		"react-router-dom": "^6.6.1",
+		"react-scripts": "5.0.1",
+		"redux": "^4.2.0",
+		"redux-persist": "^6.0.0",
+		"typescript": "^4.9.4",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.20",
+		"tailwindcss": "^3.2.4"
+	},
+	"resolutions": {
+		"@babel/core": "7.19.6",
+		"@babel/generator": "7.19.6",
+		"@babel/compat-data": "7.19.4",
+		"@babel/helper-compilation-targets": "7.19.3",
+		"@babel/helper-create-class-features-plugin": "7.19.0",
+		"@babel/helper-module-transforms": "7.19.6",
+		"babel-loader": "8.2.5"
+	}
 }
