--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
 		"daisyui": "^2.46.0",
-		"modal-andreas": "^1.1.0",
+		"faker": "^6.6.6",
+		"modal-andreas": "^1.1.2",
 		"react": "^18.2.0",
 		"react-data-table-component": "^7.5.3",
 		"react-dom": "^18.2.0",
@@ -50,6 +51,7 @@
 		]
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^7.6.0",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.20",
 		"tailwindcss": "^3.2.4"
